; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgSkewX.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgSkewX.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvgSkewX(i32* %0, float %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca float, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca [6 x float], align 16
  store i32* %0, i32** %3, align 8
  store float %1, float* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call %struct.TYPE_3__* @nvg__getState(i32* %7)
  store %struct.TYPE_3__* %8, %struct.TYPE_3__** %5, align 8
  %9 = getelementptr inbounds [6 x float], [6 x float]* %6, i64 0, i64 0
  %10 = load float, float* %4, align 4
  %11 = call i32 @nvgTransformSkewX(float* %9, float %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds [6 x float], [6 x float]* %6, i64 0, i64 0
  %16 = call i32 @nvgTransformPremultiply(i32 %14, float* %15)
  ret void
}

declare dso_local %struct.TYPE_3__* @nvg__getState(i32*) #1

declare dso_local i32 @nvgTransformSkewX(float*, float) #1

declare dso_local i32 @nvgTransformPremultiply(i32, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
